--- a/tvb_documentation/demos/exploring_power_spectra_interactive.ipynb
+++ b/tvb_documentation/demos/exploring_power_spectra_interactive.ipynb
@@ -18,10 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "03250d05",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/tvb/datatypes/surfaces.py:60: UserWarning: Geodesic distance module is unavailable; some functionality for surfaces will be unavailable.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib widget\n",
     "from tvb.simulator.plot.power_spectra_interactive import PowerSpectraInteractive"
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "20efba28",
    "metadata": {},
    "outputs": [
@@ -37,7 +46,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-05-13 14:26:00,404 - WARNING - tvb.basic.readers - File 'hemispheres' not found in ZIP.\n"
+      "2024-08-22 09:00:56,776 - WARNING - tvb.basic.readers - File 'hemispheres' not found in ZIP.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/v7/dbllwbmn3qv0sk0spbzgpd440000gn/T/ipykernel_22469/608393390.py:18: DeprecationWarning: Call to deprecated class PowerSpectraInteractive. (Use from tvb.contrib.scripts.plot PowerSpectraCoherenceInteractive)\n",
+      "  psi = PowerSpectraInteractive(time_series=tsr)\n"
      ]
     }
    ],
@@ -65,19 +82,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "ec965b52",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0baeea399f6412a8a27e2bd8a94de36",
+       "model_id": "2e229f9426534e11967897aa5bd89702",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "GridBox(children=(Output(layout=Layout(border='solid 1px black', margin='3px 3px 3px 3px', padding='2px 2px 2p…"
+       "GridBox(children=(Output(layout=Layout(border_bottom='solid 1px black', border_left='solid 1px black', border_…"
       ]
      },
      "metadata": {},
@@ -189,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
